# agenticAI-Q4

assignments/06_chatbot/: main.py  pyproject.toml
assignments/07_streaming-streaming_gemini/: main.py  pyproject.toml
assignments/class_06_streaming/: chainlit.py  main.py  pyproject.toml
assignments/class_08/: deterministic.py  llm_as_judge.py  main.py  parallelization.py  pyproject.toml
assignments/class_10/: main.py  pyproject.toml
assignments/class_ass_context_handoff_tools/: .gitignore  app.py  context.py  guardrails.py  hooks.py  main.py  main_agent.py  pyproject.toml  stream.py
assignments/class_ass_context_handoff_tools/agent/: maths.py  python.py
assignments/class_ass_context_handoff_tools/tools/: maths_teacher.py  python_teacher.py
assignments/health-wellness-app/: README.md  package-lock.json  package.json
assignments/health_wellness_agent/: .gitignore  README.md  agent.py  app.py  context.py  guardrails.py  hooks.py  main.py  pyproject.toml  requirements.txt  streamlit.py
assignments/health_wellness_agent/custom_agents/: escalation_agent.py  injury_support_agent.py  nutrition_expert_agent.py
assignments/health_wellness_agent/tools/: goal_analyzer.py  meal_planner.py  scheduler.py  tracker.py  workout_recommender.py
assignments/health_wellness_agent/utils/: streaming.py  streamingformain.py
assignments/openai-openrouter/: README.md  main.py  pyproject.toml
maths-python-teacher/: package-lock.json  package.json
my-chatbot/: package-lock.json  package.json
quiz-prep/openai-sdk-doc/: agenthooks.py  ctx_mng.py  handoffs.py  main.py  (+8 more)
(+33 files in other folders)
